# md2anki

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
Documentation/: md2anki.1.md  md2anki.al.5.md  md2anki.md.5.md  md2anki.txt.5.md  md2atxt.1.md  md2atxt.al.5.md  md2atxt.md.5.md  md2atxt.txt.5.md
scripts/: docgen.py
src/md2anki/: __main__.py  cli.py
src/md2atxt/: __main__.py  cli.py  conversion.py
tests/: test_conversion.py
