[build-system]
requires = ["hatchling >= 1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "md2anki"
dynamic = [ "version" ]
authors = [
  { name="Timo Früh", email="dev@tifrueh.ch" },
]
description = "Convert markdown notes to anki notes"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE.txt"]

[project.urls]
Homepage = "https://github.com/tifrueh/md2anki"
Issues = "https://github.com/tifrueh/md2anki/issues"

[project.scripts]
md2anki = "md2anki:cli.main"

[tool.hatch.build]
artifacts = ["Documentation/md2anki.1"]
exclude = ["Documentation/*.md"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/md2anki/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/md2anki"]

[tool.hatch.build.hooks.custom]
path = "scripts/docgen.py"
